public/examples/errors/gop_without_import.gop
<!go
fmt.Println("This GOP file is missing the fmt import")